# analyze-your-dna

./: .coverage  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  benchmark_report.py  pyproject.toml
.claude/: settings.json
.claude/skills/: update-readme-snp-tables.md
.github/workflows/: lint.yml  test.yml
planning/: 20260202-dna-phenotype.md  20260202-dna-phenotyping-AI-image-gen.md  20260202-genetic-trait-data-expansion.md  20260203-dryness.md  TODO-future.md  TODO.md
scripts/: __init__.py  analyze_genome.py  comprehensive_snp_database.py  disease_risk_analyzer.py  fast_loader.py  full_health_analysis.py  generate_exhaustive_report.py  generate_portrait_prompt.py  generate_traits_report.py  run_full_analysis.py  traits_snp_database.py  update_clinvar.py  utils.py
src/analyze_dna/: __init__.py  analyze_genome.py  cli.py  comprehensive_snp_database.py  disease_risk_analyzer.py  fast_loader.py  full_health_analysis.py  generate_exhaustive_report.py  generate_portrait_prompt.py  generate_traits_report.py  run_full_analysis.py  traits_snp_database.py  types.py  update_clinvar.py  utils.py
tests/: conftest.py  test_analyze_genome.py  test_checksum_verification.py  test_cli_integration.py  test_disease_risk_analyzer.py  test_dryness_snps.py  test_fast_loader.py  test_full_health_analysis.py  test_generate_exhaustive_report.py  test_generate_portrait_prompt.py  test_generate_traits_report.py  test_run_full_analysis.py  test_update_clinvar.py  test_utils.py
tests/data/: dryness_genome.txt  synthetic_genome.txt
